package ir.artor.badoki.model;

public enum AppointmentStatus {
    PENDING,     // در انتظار
    CONFIRMED,   // قطعی
    COMPLETED,   // انجام‌شده
    CANCELED     // لغو شده
}
