package ir.artor.badoki.model;

public enum Role {
    PATIENT,
    DOCTOR,
    ADMIN
}
